[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_hyperliquid"
version = "0.15.1"
description = "Hyperliquid exchange plugin for bt_api framework - decentralized perpetual futures exchange"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "hyperliquid",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "perpetual-futures",
    "decentralized"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.entry-points."bt_api.plugins"]
hyperliquid = "bt_api_hyperliquid.plugin:register_plugin"

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_hyperliquid"
Documentation = "https://bt-api-hyperliquid.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_hyperliquid"
Issues = "https://github.com/cloudQuant/bt_api_hyperliquid/issues"
Changelog = "https://github.com/cloudQuant/bt_api_hyperliquid/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003", "TC"]
ignore = [
    "TC002",
    "TRY003",
    "F401",
    "F841",
    "E501",
    "Q000",
    "Q003",
    "F403",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
